<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/blue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="30dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/stopwatch"/>

        <TextView
            android:id="@+id/tvTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="60 sec"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginLeft="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right">

            <TextView
                android:id="@+id/tv_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/pink"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>




    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="30dp">

        <TextView
            android:id="@+id/txt_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quest1"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginBottom="20dp"/>

        <ImageView
            android:id="@+id/iv_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img1"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/txt_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20sp"
            android:textColor="@color/purple_200"
            android:gravity="center_horizontal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="30dp"
        android:gravity="center">

        <Button
            android:id="@+id/btn1"
            android:layout_height="100dp"
            android:text="@string/text_btn1"
            android:textStyle="bold"
            android:textSize="8sp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn2"
            android:layout_height="100dp"
            android:text="@string/text_btn2"
            android:textStyle="bold"
            android:textSize="8sp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn3"
            android:layout_height="100dp"
            android:text="@string/text_btn3"
            android:textStyle="bold"
            android:textSize="8sp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn4"
            android:layout_height="100dp"
            android:text="@string/text_btn4"
            android:textStyle="bold"
            android:textSize="8sp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp">

        <ImageButton
            android:id="@+id/nextLeft_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/right_button"
            android:layout_weight="1"
            android:layout_marginRight="20dp"/>


        <ImageButton
            android:id="@+id/nextRight_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/left_button"
            android:layout_weight="1"/>

    </LinearLayout>


</LinearLayout>